parslers-benchmark/src/tests/invalid/syntaxErr/function/functionEndingNotReturn.wacc
# function body not terminated with return or exit statement
# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int f() is
    return 2;
    println "How on Earth did we get here?" 
  end

  int x = call f();
  println x
end
	
